Fixed the name to all lowercase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Whiteboard_Practice",
+  "name": "whiteboard_practice",
   "version": "1.0.0",
   "description": "Whiteboard practice problems",
   "main": "index.js",
